--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^4.0.11",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.11",
+    "@devexpress/dx-react-core": "^4.0.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
